# ParaMind-Parallel_Agent_Orchestration

./: .env.example  .gitattributes  .gitignore  README.md  check_env.py  environment.yml  pyproject.toml  reproduce_paris_plan.py  requirements.txt  setup.cfg  setup_structure.py  test_aggregator_simple.py  test_available_models.py
benchmarks/: analyze_results.py  measure_speedup.py  prompts.json  run_eval.py
benchmarks/results/: eval_2025_11_18_19_08.csv  eval_2025_11_18_19_08.json  eval_2025_11_18_19_08_report.md  eval_2025_11_19_19_45.csv  eval_2025_11_19_19_45.json
config/: settings.py
data/: test_prompts.json
src/: agents.py  aggregator.py  api.py  cache.py  controller.py  llm_clients.py
tests/: test_available_models.py  test_dependencies.py  test_dynamic_planning.py  test_robustness.py  test_setup.py
ui/: app.js  index.html  premium-how-it-works.css  streamlit_app.py  style.css
